fix: alignment

--- a/src/styles/components/nav-bar.scss
+++ b/src/styles/components/nav-bar.scss
@@ -4,7 +4,6 @@
     justify-content: flex-end;
     width: 100%;
     padding: 0.5em;
-    max-width: 1280px;
     font-size: 15pt;
     z-index: 1;
     .nav-item {
